--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
 
 <pre><code class="language-markup" id="script-tag-example"></code></pre>
 
+  <script type="text/p5" data-autoplay data-height="600" data-preview-width="400">
+function setup() {
+  createCanvas(600, 400);
+}
+
+function draw() {
+  background(255, 0, 200);
+}
+
 <p>
   The script will then automatically transform all script tags of
   type <code>text/p5</code> on the page into editable widgets, like so:
