--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <pre><code class="language-markup" id="script-tag-example"></code></pre>
 
-  <script type="text/p5" data-autoplay data-height="600" data-preview-width="400">
+<script type="text/p5" data-autoplay data-height="600" data-preview-width="400">
 function setup() {
   createCanvas(600, 400);
 }
@@ -45,11 +45,8 @@ function setup() {
 function draw() {
   background(255, 0, 200);
 }
+</script>
 
-<p>
-  The script will then automatically transform all script tags of
-  type <code>text/p5</code> on the page into editable widgets, like so:
-</p>
 
 <script type="text/p5">
 function setup() {
